<resources>
    <string name="app_name">Android Designs</string>
    <string name="learn_forward">Learn Forward</string>
    <string name="group_text">Group Text</string>
    <string name="child_title">Child Title</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="read_it_together">Read it together</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password.?</string>
    <string name="enter_your_login_details">Enter your login details</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="join_with_us">Join With Us</string>
    <string name="all_details_required">All Details Required.</string>
    <string name="submit">Submit</string>
    <string name="e_mail">E-MAIL</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="spin">spin</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="img">img</string>
</resources>
