<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.SignInActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bookIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:alpha="0.5"
        android:contentDescription="@null"
        android:src="@drawable/exp_l_ico" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bookITextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookIconImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:includeFontPadding="true"
        android:text="@string/learn_forward"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/comfortaa_bold" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loadingProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-3dp"
        android:foregroundGravity="bottom"
        android:indeterminate="true"
        android:padding="0dp" />

    <RelativeLayout
        android:id="@+id/afterAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/WelcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/readItTogetherTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/WelcomeTextView"
            android:layout_marginTop="10dp"
            android:text="@string/enter_your_login_details"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/readItTogetherTextView"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circularbordersolidtop"
                android:gravity="center"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/eloginId"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:hint="@string/email"
                    android:importantForAutofill="yes"
                    android:inputType="textEmailAddress"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:imeOptions="actionNext"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/circularbordersolidbottom"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ePassword"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:imeOptions="actionDone"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@color/white"
                    android:textSize="16sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/link_forgotpassword"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:paddingEnd="15dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@id/signUpButton"
            android:layout_marginBottom="10dp"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/skipButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:background="@drawable/circular_login"
                android:text="@string/skip"
                android:onClick="skip"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_color"
                android:text="@string/login"
                android:onClick="logIn"
                android:layout_marginStart="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/circular_sign_up"
            android:text="@string/sign_up"
            android:onClick="signUp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </RelativeLayout>

</RelativeLayout>